syntax="proto2";
package protocol.client.gate;

message C2GTest1 
{
	required int32 testint1 = 1;
	required string teststring1 = 2;
	repeated C2GTest2 c2gTest2List = 3;
}

message C2GTest2 
{
	required int32 testint1 = 1;
	required int32 testint2 = 2;
}

message C2GTest3 
{
	required int32 testint3 = 1;
	required string teststring3 = 2;
}

